--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
